         fuller.c,ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},if1.c,if2.c,
         joystick.c,kempmouse.c,melodik.c,printer.c,scld.c,speccyboot.c,
         specdrum.c,spectranet.c,ula.c,usource.c}: add C99-style named
         initialisers in comments (Stuart).
20150512 event.c,machines/{spec16.c,tc2068.c},periph.c,peripherals/{nic/{
         w5100.c,w5100_socket.c},spectranet.c},ui.c,ui/{sdl/sdldisplay.c,
         widget/{filesel.c,pokemem.c}}: avoid mixing declarations and code for
         C89 compilers (Adrien Destugues).
20150513 peripherals/disk/wd_fdc.[ch]: add WD2797 non-IBM sector sizes (addition
         to patch #330) (Gergely Szasz).
20150513 compat.h: fix ARRAY_SIZE when using a modern GCC with strict C89 syntax
         (Sergio).
20150513 peripherals/disk/wd_fdc.c,ui/svga/svgadisplay.c: avoid C99 comments
         (Stuart).
20150514 ui/gtk/gtkjoystick.c,ui/sdl/sdljoystick.c,ui/svga/svgajoystick.c,
         ui/uijoystick.[ch],ui/win32/win32joystick.[c|h|rc]: standardise the
         number of joystick buttons across UIs (fixes bug #332) (UB880D).
20150514 peripherals/nic/w5100_internals.h: #include <sys/select.h> for POSIX
         systems (Adrien Destugues).
20150515 peripherals/disk/didaktik.c: fix address of i8255 port (more of patch
         #331) (thanks, UB880D) (Gergely Szasz).
20150517 peripherals/spectranet.[ch]: add missing inclusion of spectranet.h and
         fix declaration of spectranet_programmable_trap (thanks, LTO) (Stuart).
20150518 peripherals/disk/disk.c: fix use of uninitialized variable (Sergio).
20150518 peripherals/speccyboot.c,ui/widget/options.pl: avoid mixing
         declarations and code for C89 compilers (Sergio).
20150524 movie.c,ui/{fb/fbui.c,win32/{debugger.c,pokefinder.c},xlib/{xdisplay.c,
         xstatusbar.pl}},unittests/unittests.c: use C90 parameter lists
         (Stuart).
20150525 z80/coretest.c: fix parameter list of spectranet_page() definition in
         coretest (Stuart).